--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
         <h1>ΔΘ</h1>
         <p>δθ este sitio (<a href="https://delthia.com">delthia.com</a>) aún está en construcción</p>
+        <hr>
+        <a href="https://bus.delthia.com">bus.delthia.com</a>
 </body>
 </html>
