--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <head>
-        <meta charset="utf-8">
-        <title>delthia</title>
-        <link rel="icon" href="delthia.png">
+	<meta charset="utf-8">
+	<title>Delthia</title>
+	<link rel="icon" href="delthia-2.svg">
+    <link rel="stylesheet" href="style.css">
+
+    <!-- Fuentes -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+
+    <!-- Plausible -->
+    <script defer data-api="https://plausible.delthia.com/api/event" data-domain="delthia.com" src="https://plausible.delthia.com/js/script.js"></script>
 </head>
 <body>
-        <h1>ΔΘ</h1>
-        <p>δθ este sitio (<a href="https://delthia.com">delthia.com</a>) aún está en construcción</p>
+    <div class="contenedor">
+        <img src="https://avatars.githubusercontent.com/u/101663529?v=4" alt="delthia icon" class="icono">
+        <h1 style="margin-top: 0.25em">delthia.com</h1>
         <hr>
-        <a href="https://bus.delthia.com">bus.delthia.com</a>
+        <h2>Proyectos</h2>
+	<!--<p><img src="https://bus.delthia.com/static/icons/icono-bus-32.png" width="24px" style="vertical-align: middle"> <a href="https://bus.delthia.com" target="_blank">bus.delthia.com</a>: información en tiempo real sobre el bus urbano de Coruña</p>-->
+	<p><img src="https://raw.githubusercontent.com/delthia/bus-coruna-api/main/bus/static/icons/icono-bus-32.png" width="24px" style="vertical-align: middle"> <a href="https://bus.delthia.com" target="_blank">bus.delthia.com</a>: información en tiempo real sobre el bus urbano de Coruña</p>
+        <h2>Enlaces</h2>
+        <p>Perfil de <img src="https://github.githubassets.com/favicons/favicon-dark.svg" width="16px" style="vertical-align: middle; margin-left: 0.25em"> <a href="https://github.com/delthia" target="_blank">GitHub</a> y <img src="https://design.codeberg.org/logo-kit/icon_inverted.svg" width="16px" style="vertical-align: middle; margin-left: 0.25em"> <a href="https://codeberg.org/delthia" target="_blank">Codeberg</a></p>
+        <p>Correo electrónico: <span style="color: var(--accent)">delthia <span style="color: var(--haccent)">[arroba]</span> delthia <span style="color: var(--haccent)">[punto]</span> com</span></p>
+        <p>Clave PGP: <a href="delthia.asc">clic para verla</a></p>
+        <small><i>huella: <span style="color: var(--haccent)">51C3 C1D1 E4A2 C4BD 0DA2 75A2 FA8D 70B4 1916 EF48</span></i></small>
+    </div>
+    <small class="abajo-izquierda"><a href="en.html">In english</small>
+    <small class="abajo-derecha"><a href="privacidad.html">Privacidad</a></small>
 </body>
 </html>
