Mejorar en pantallas pequeñas y limpiar código
Eliminar t.png

--- a/en.html
+++ b/en.html
@@ -1,32 +1,35 @@
 <!DOCTYPE html>
+<head lang="en">
+<html>
 <head>
 	<meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Delthia</title>
-	<link rel="icon" href="delthia.svg">
-    <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="style.css">
 
-    <!-- Fuentes -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;1,300;1,400&display=swap" rel="stylesheet">
+  <!-- Fuentes -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;1,300&display=swap" rel="stylesheet">
 
-    <!-- Plausible -->
-    <script defer data-domain="delthia.com" src="https://plausible.delthia.com/js/script.js"></script>
+  <!-- Plausible -->
+  <script defer data-api="https://plausible.delthia.com/api/event" data-domain="delthia.com" src="https://plausible.delthia.com/js/script.js"></script>
 </head>
 <body>
-    <div class="contenedor">
-        <img src="https://avatars.githubusercontent.com/u/101663529?v=4" alt="delthia icon" class="icono">
-        <h1 style="margin-top: 0.25em">delthia.com</h1>
-        <hr>
-        <h2>Projects</h2>
-	<p><!--<img src="https://bus.delthia.com/static/icons/icono-bus-32.png" width="24px" style="vertical-align: middle">--><img src="https://raw.githubusercontent.com/delthia/bus-coruna-api/main/bus/static/icons/icono-bus-32.png" width="24px" style="vertical-align: middle"> <a href="https://bus.delthia.com" target="_blank">bus.delthia.com</a>: realtime information about Coruña's urban bus</p>
-        <h2>Links</h2>
-        <p><img src="https://github.githubassets.com/favicons/favicon-dark.svg" width="16px" style="vertical-align: middle; margin-left: 0.25em"> <a href="https://github.com/delthia" target="_blank">GitHub</a> and <img src="https://design.codeberg.org/logo-kit/icon_inverted.svg" width="16px" style="vertical-align: middle; margin-left: 0.25em"> <a href="https://codeberg.org/delthia" target="_blank">Codeberg</a> profiles</p>
-        <p>Email: <span style="color: var(--accent)">delthia <span style="color: var(--haccent)">[at]</span> delthia <span style="color: var(--haccent)">[dot]</span> com</span></p>
-        <p>PGP key: <a href="delthia.asc">clic to see it</a></p>
-        <small><i>fingerprint: <span style="color: var(--haccent)">51C3 C1D1 E4A2 C4BD 0DA2 75A2 FA8D 70B4 1916 EF48</span></i></small>
+  <div class="contenedor">
+    <div class="contenido">
+      <img src="https://avatars.githubusercontent.com/u/101663529?v=4" alt="Profile picture" width="128px" style="border-radius: 50%">
+      <h1 style="margin-top: 0.25em">delthia.com</h1>
+      <hr>
+      <h2>Projects</h2>
+      <p><img src="img/bus.png" alt="bus.delthia.com favicon" width="24px" style="vertical-align: middle"> <a href="https://bus.delthia.com" target="_blank">bus.delthia.com</a>: realtime information about Coruña's urban bus</p>
+      <h2>Links</h2>
+      <p><img src="img/github.png" alt="GitHub logo" class="icono"> <a href="https://github.com/delthia" target="_blank">GitHub</a> and <img src="img/codeberg.png" alt="Codeberg logo" class="icono"> <a href="https://codeberg.org/delthia" target="_blank">Codeberg</a> profiles</p>
+      <p>Email: <span style="color: var(--accent)">delthia <span style="color: var(--haccent)">[at]</span> delthia <span style="color: var(--haccent)">[dot]</span> com</span></p>
+      <p>PGP key: <a href="delthia.asc">click to see it</a></p>
+      <small><i>fingerprint: <span style="color: var(--haccent)">51C3 C1D1 E4A2 C4BD 0DA2 75A2 FA8D 70B4 1916 EF48</span></i></small>
     </div>
-    <small class="abajo-izquierda"><a href="index.html">In spanish</small>
-    <small class="abajo-derecha"><a href="privacy.html">Privacy</a></small>
+  </div>
+  <small class="abajo abajo-izquierda"><a href="index.html">In spanish</small>
 </body>
 </html>
